# jetbrains-internship-jb-lldb

./: .gitignore  CMakeLists.txt  README.md  elf.cpp  elf.h  gwatch.cpp  process.cpp  process.h  test.cpp
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gwatch  gwatch_test
_codeql_build_dir/dependencies/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/dependencies/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/dependencies/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests  tests[1]_include.cmake  tests[1]_tests.cmake
_codeql_build_dir/tests/tested_programs/: basic_no_pie_test  basic_test  invalid_file
tests/: CMakeLists.txt  test_elf.cpp  test_process.cpp
tests/tested_programs/: basic_test.cpp
